--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -44,6 +44,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   jaffle_shop:
-    +materialized: table
+    staging:
+      +materialized: view
+
+    marts:
+      +materialized: table
     # example:
     #   +materialized: view
+
+  stripe:
+    staging:
+      +materialized: view
